--- a/_posts/2021-11-10-about.md
+++ b/_posts/2021-11-10-about.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title: About
+author: Siddhu
+description: Hello About
+# image-url: /assets/images/book-stock-image.jpg
 ---
 
 This is a demo of all styled elements in Jekyll Now.
@@ -15,11 +18,11 @@ This is a paragraph, it's surrounded by whitespace. Next up are some headers, th
 
 #### Header 4
 
-A link to [Jekyll Now](http://github.com/barryclark/jekyll-now/). A big ass literal link <http://github.com/barryclark/jekyll-now/>
+A link to [Home]({{ site.baseurl }}/). A big ass literal link <http://github.com/barryclark/jekyll-now/>
 
 An image, located within /images
 
-![an image alt text]({{ site.baseurl }}/images/jekyll-logo.png "an image title")
+![an image alt text]({{ site.baseurl }}/assets/images/book-stock-image.jpg "an image title")
 
 - A bulletted list
 
