--- a/_posts/2021-11-10-test-post.md
+++ b/_posts/2021-11-10-test-post.md
@@ -2,6 +2,8 @@
 layout: post
 title: A test post
 author: Siddhu
+description: Hello World
+image-url: /assets/images/book-stock-image.jpg
 ---
 
 # H1
@@ -89,14 +91,50 @@ alert(s);
 ```
 
 ```python
-# This is a comment
-s = "Python syntax highlighting"
-print(s)
+"""
+main.py docs
+"""
+import logging
+from os import wait
+from aiogram import Bot, Dispatcher, executor, types
+from aiogram.contrib.fsm_storage.memory import MemoryStorage
+from config import API_TOKEN, RATE_LIMIT
 
-def hello_world():
-   print("Hello World!")
 
-hello_world()
+# Configure logging
+logging.basicConfig(filename='.logs/telegrambot.log', level=logging.DEBUG)
+storage = MemoryStorage()
+
+# Initialize bot and dispatcher
+bot = Bot(token=API_TOKEN)
+dp = Dispatcher(bot, storage=storage, throttling_rate_limit=RATE_LIMIT)
+
+@dp.message_handler(commands=['register'])
+async def register_user():
+    # check if user has already been registered
+    # if they are, then exit with a reply that says
+    # they are already registered
+    # if not, then register them before asking for
+    # their email id and other personal information
+    pass
+
+
+@dp.message_handler(commands=['start'])
+@dp.throttled(lambda msg, loop, *args, **kwargs:
+              loop.create_task(bot.delete_message(msg.from_user.id, msg.message_id)))
+async def send_welcome(message: types.Message):
+    """
+    This handler will be called when user sends `/start` or `/help` command
+    """
+    print( await bot.get_my_commands())
+    await message.reply(f"""
+Hello, {message.from_user.first_name}!
+Welcome to BlockDeskVentures, A community driven Venture Capital advancing Blockchain Technology.
+    """)
+
+if __name__ == '__main__':
+    executor.start_polling(dp, skip_updates=True)
+
 ```
 
 ```
@@ -139,7 +177,8 @@ Hyphens
 Asterisks
 
 ---
- text
+
+text
 Underscores
 
 Here's a line for us to start with.
