--- a/_posts/2021-11-10-about.md
+++ b/_posts/2021-11-10-about.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: About
-author: Siddhu
+author: siddhu yeturi
 description: Hello About
 # image-url: /assets/images/book-stock-image.jpg
 ---
